<resources>
    <string name="app_name">AppCocinaFCT</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">Regístrate</string>
    <string name="confirmPassword">Confirmar contraseña</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="birthdate">Fecha de nacimiento</string>
    <string name="recetas" />
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="name2">Nombre:</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="pasos">Pasos</string>

    <string-array name="sizeFontValues">
        <item>18</item>
        <item>20</item>
        <item>22</item>
        <item>24</item>
        <item>26</item>
        <item>28</item>
        <item>30</item>
        <item>32</item>
        <item>34</item>
        <item>38</item>
        <item>40</item>
    </string-array>
    <string-array name="sizeFontKeys">
        <item>18</item>
        <item>20</item>
        <item>22</item>
        <item>24</item>
        <item>26</item>
        <item>28</item>
        <item>30</item>
        <item>32</item>
        <item>34</item>
        <item>38</item>
        <item>40</item>
    </string-array>

</resources>