<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".CrearRecetaActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="30dp"
        app:cardBackgroundColor="@color/red"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="6dp"
                android:src="@drawable/ic_recipe"
                app:tint="@color/dark_red" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/red"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="6dp"
                android:src="@drawable/ic_ingredientes"
                app:tint="@color/dark_red" />

            <EditText
                android:id="@+id/txtIngrediente"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:hint="@string/ingredientes"
                android:layout_marginHorizontal="8dp"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp" />
            <Button
                android:id="@+id/btn_addIngredient"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="6dp"
                android:drawableRight="@drawable/ic_add"
                android:drawableTint="@color/dark_red"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        app:cardBackgroundColor="@color/red"
        app:cardCornerRadius="8dp">
        <TextView
            android:id="@+id/tv_listaIngredientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            tools:text="-Hola"
            android:padding="10dp">
        </TextView>
    </androidx.cardview.widget.CardView>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pasos"/>
    </FrameLayout>
</LinearLayout>